<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.userapp.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/user_name"
        android:drawableStart="@drawable/id"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/user_password"
        android:drawableStart="@drawable/pass"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:id="@+id/loginBtn"
        android:backgroundTint="#009688"
        android:textColor="#ffffff"
        android:layout_weight="0.03" />

</LinearLayout>
