<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingRight="40dp"
    android:paddingBottom="20dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/status"
        android:id="@+id/textView"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BAN"
        android:id="@+id/textView2"
        android:textColor="#800303"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/place"
        android:id="@+id/textView3"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="STARBUCKS"
        android:id="@+id/textView4"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/price"
        android:id="@+id/textView5"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25,000"
        android:id="@+id/textView6"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text= "@string/date"
        android:id="@+id/textView7"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2016-07-05"
        android:id="@+id/textView8"
        android:layout_marginBottom="15dp"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text= "@string/memo"
        android:id="@+id/textView9"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DRINKING"
        android:id="@+id/textView10"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text= "@string/account"
        android:id="@+id/textView11"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ACCOUNT"
        android:id="@+id/textView12"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text= "@string/receipt"
        android:id="@+id/textView13"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_weight="0.34"
        android:background="#f7dada" />

</LinearLayout>
